force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>An object used to store information about a book.</description>
    <label>Book</label>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Book Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>