force-app/main/default/objects/Book__c/fields/Authors__c.field-meta.xml
<CustomField>
    <fullName>Authors__c</fullName>
    <label>Authors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>