force-app/main/default/objects/Book__c/fields/By_Statement__c.field-meta.xml
<CustomField>
    <fullName>By_Statement__c</fullName>
    <label>By Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>