force-app/main/default/objects/Book__c/fields/Cover_URL__c.field-meta.xml
<CustomField>
    <fullName>Cover_URL__c</fullName>
    <label>Cover URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>