force-app/main/default/objects/Book__c/fields/Ebook_URL__c.field-meta.xml
<CustomField>
    <fullName>Ebook_URL__c</fullName>
    <label>Ebook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>