force-app/main/default/objects/Book__c/fields/Number_Of_Pages__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Pages__c</fullName>
    <label>Number Of Pages</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>