force-app/main/default/objects/Book__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <label>Publish Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>