force-app/main/default/objects/Book__c/fields/Publishers__c.field-meta.xml
<CustomField>
    <fullName>Publishers__c</fullName>
    <label>Publishers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>