force-app/main/default/objects/Book__c/fields/Subject_People__c.field-meta.xml
<CustomField>
    <fullName>Subject_People__c</fullName>
    <label>Subject People</label>
    <length>255</length>
    <type>Text</type>
</CustomField>