force-app/main/default/objects/Book__c/fields/Subject_Places__c.field-meta.xml
<CustomField>
    <fullName>Subject_Places__c</fullName>
    <label>Subject Places</label>
    <length>255</length>
    <type>Text</type>
</CustomField>