force-app/main/default/objects/Book__c/fields/Subject_Times__c.field-meta.xml
<CustomField>
    <fullName>Subject_Times__c</fullName>
    <label>Subject Times</label>
    <length>255</length>
    <type>Text</type>
</CustomField>